--- a/src/view/left-aside.html
+++ b/src/view/left-aside.html
@@ -1,6 +1,6 @@
 <aside class="left-aside">
   <div class="navbar">
-    <img class="logo" src="/assets/img/logo.svg">
+    <img class="logo" src="/assets/img/logo.svg" alt="Logo">
 
     <h1 class="name">Pilesky Denis</h1>
     <small class="university">Vladivostok State University of Economics and Service</small>
