--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -130,6 +130,14 @@ main {
   width: 100%;
   height: 100vh;
   padding: 24px 32px 32px;
+
+  a {
+    color: $black;
+    font-style: italic;
+    &:hover {
+      color: $dirty-opacity-black;
+    }
+  }
 }
 
 // Right aside
