--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,11 +1,13 @@
-@import url(/assets/font/harmonyos-sans.css);
+@import url(/assets/fonts/harmonyos-sans.css);
 
 // Config
-$black: #414141;
-$white: #fefefe;
+$black: #333333;
+$white: #ffffff;
 $dirty-white: #d7d7d7;
 $opacity-black: #00000033;
 $dirty-opacity-black: #00000099;
+$blue: #3755fe;
+$opacity-blue: rgba(55, 85, 254, 0.65);
 
 html, body {
   margin: 0;
@@ -13,11 +15,11 @@ html, body {
 
   box-sizing: border-box;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: $white;
 
   font-family: 'HarmonyOS Sans', -apple-system, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   color: $black;
 }
 
@@ -40,13 +42,14 @@ p {
 .container {
   display: flex;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  height: max-content;
 }
 
 // Left aside
 .left-aside {
   width: 100%;
-  background: url("/assets/img/3.jpg") center no-repeat;
+  background: url("/assets/img/3.webp") center no-repeat;
   background-size: cover;
 }
 
@@ -117,32 +120,32 @@ p {
   bottom: 32px;
   letter-spacing: 0.5px;
   color: $white;
-  font-size: 8px;
+  font-size: 10px;
   opacity: 0.5;
   text-shadow: 0 4px 8px $opacity-black;
 }
 
 // Content
 main {
-  overflow-y: hidden;
   background-color: $white;
+  min-width: 500px;
   max-width: 800px;
   width: 100%;
-  height: 100vh;
   padding: 24px 32px 32px;
 
   a {
-    color: $black;
+    color: $blue;
     font-style: italic;
+
     &:hover {
-      color: $dirty-opacity-black;
+      color: $opacity-blue;
     }
   }
 }
 
 // Right aside
 .right-aside {
-  width: calc(100% - 320px);
+  width: 100%;
 }
 
 // Tablet
@@ -173,30 +176,5 @@ main {
 
   .right-aside {
     display: none;
-  }
-}
-
-@media screen and (min-width: 841px) {
-  main {
-    &:hover {
-      overflow-y: auto;
-      overflow-x: hidden;
-      -webkit-overflow-scrolling: touch;
-      -moz-overflow-scrolling: touch;
-      -ms-overflow-scrolling: touch;
-      -o-overflow-scrolling: touch;
-      overflow-scrolling: touch;
-    }
-
-    &::-webkit-scrollbar {
-      -webkit-appearance: none;
-      width: 7px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      border-radius: 2px;
-      background-color: rgba(0, 0, 0, 0.5);
-      -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
-    }
   }
 }
