--- a/src/view/component/head.html
+++ b/src/view/component/head.html
@@ -5,7 +5,7 @@
   <meta name="description" content = "Разработка сайтов и мобильных приложений на заказ">
 
   <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="/assets/css/main.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
 
   <title><!-- $title? --></title>
 </head>
