--- a/src/view/component/head.html
+++ b/src/view/component/head.html
@@ -2,10 +2,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="yandex-verification" content="c08fc87e9cb4bc9b" />
-  <meta name="description" content = "Разработка сайтов и мобильных приложений на заказ">
 
   <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/assets/css/style.css">
 
   <title><!-- $title? --></title>
+  <!-- $description = Разработка сайтов и мобильных приложений на заказ-->
+
+  <!-- Meta-Data for social networks -->
+  <meta property="og:title" content="<!-- $title? -->" />
+  <meta property="og:description" content="<!-- $description? -->" />
+  <meta name="description" content = "<!-- $description? -->">
+  <meta property="og:site_name" content="Pilesky Denis - <!-- $title? -->" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://pileskyd.me/" />
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@PileskyD">
+  <meta name="twitter:image" content="https://pileskyd.me/assets/images/favicon.ico" />
+  <meta property="og:image" content="https://pileskyd.me/assets/images/favicon.ico" />
+  <meta name="thumbnail" content="https://pileskyd.me/" />
 </head>
