--- a/src/view/component/head.html
+++ b/src/view/component/head.html
@@ -18,7 +18,7 @@
   <meta property="og:url" content="https://pileskyd.me/" />
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@PileskyD">
-  <meta name="twitter:image" content="https://pileskyd.me/assets/images/favicon.ico" />
-  <meta property="og:image" content="https://pileskyd.me/assets/images/favicon.ico" />
+  <meta name="twitter:image" content="https://pileskyd.me/assets/images/banner.png" />
+  <meta property="og:image" content="https://pileskyd.me/assets/images/banner.png" />
   <meta name="thumbnail" content="https://pileskyd.me/" />
 </head>
