--- a/src/view/component/head.html
+++ b/src/view/component/head.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="/assets/css/style.css">
 
   <title><!-- $title? --></title>
-  <!-- $description = Разработка сайтов и мобильных приложений на заказ-->
 
   <!-- Meta-Data for social networks -->
   <meta property="og:title" content="<!-- $title? -->" />
@@ -18,7 +17,7 @@
   <meta property="og:url" content="https://pileskyd.me/" />
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@PileskyD">
-  <meta name="twitter:image" content="https://pileskyd.me/assets/images/banner.png" />
-  <meta property="og:image" content="https://pileskyd.me/assets/images/banner.png" />
+  <meta name="twitter:image" content="https://pileskyd.me/assets/img/banner.png" />
+  <meta property="og:image" content="https://pileskyd.me/assets/img/banner.png" />
   <meta name="thumbnail" content="https://pileskyd.me/" />
 </head>
