--- a/src/view/component/head.html
+++ b/src/view/component/head.html
@@ -4,7 +4,8 @@
   <meta name="yandex-verification" content="c08fc87e9cb4bc9b" />
 
   <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/assets/fonts/exo2/exo2.css">
+<!--  <link rel="stylesheet" href="/assets/css/style.css">-->
 
   <title><!-- $title? --></title>
 
@@ -20,4 +21,9 @@
   <meta name="twitter:image" content="https://pileskyd.me/assets/img/banner.png" />
   <meta property="og:image" content="https://pileskyd.me/assets/img/banner.png" />
   <meta name="thumbnail" content="https://pileskyd.me/" />
+
+  <!-- Style -->
+  <style>
+      <!-- @import '../../../assets/css/style.css' -->
+  </style>
 </head>
