--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,3 @@
-@import url(/assets/fonts/harmonyos-sans.css);
-
 // Config
 $black: #333333;
 $white: #ffffff;
@@ -7,7 +5,9 @@ $dirty-white: #d7d7d7;
 $opacity-black: #00000033;
 $dirty-opacity-black: #00000099;
 $blue: #3755fe;
-$opacity-blue: rgba(55, 85, 254, 0.65);
+$opacity-blue: #3755FEA5;
+$brand-color: #80257B;
+$accent-color: #80257B33;
 
 html, body {
   margin: 0;
@@ -18,7 +18,7 @@ html, body {
   height: 100%;
   background-color: $white;
 
-  font-family: 'HarmonyOS Sans', -apple-system, sans-serif;
+  font-family: 'Exo 2', -apple-system, sans-serif;
   font-size: 16px;
   color: $black;
 }
@@ -153,6 +153,34 @@ main {
   }
 }
 
+.table-container {
+  border-top: 5px solid $brand-color;
+  border-color: $brand-color;
+  border-radius: 6px 6px 0 0;
+  box-shadow: 0 6px 12px $opacity-black;
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    text-align: left;
+
+    td, th {
+      padding: .75rem;
+      vertical-align: top;
+      border-bottom: 1px solid $opacity-black;
+      overflow-wrap: break-word;
+      word-wrap: break-word;
+      hyphens: auto;
+    }
+
+    tbody tr:hover {
+      background-color: $accent-color;
+    }
+
+  }
+}
+
+
 // Right aside
 .right-aside {
   width: 100%;
@@ -186,5 +214,11 @@ main {
 
   .right-aside {
     display: none;
+  }
+}
+
+@media screen and (min-width: 841px) {
+  main {
+    box-shadow: 0 6px 12px $opacity-black;
   }
 }
