--- a/src/view/component/head.html
+++ b/src/view/component/head.html
@@ -3,10 +3,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="yandex-verification" content="c08fc87e9cb4bc9b" />
 
-  <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="/assets/fonts/exo2/exo2.css">
-<!--  <link rel="stylesheet" href="/assets/css/style.css">-->
-
   <title><!-- $title? --></title>
 
   <!-- Meta-Data for social networks -->
@@ -23,6 +19,8 @@
   <meta name="thumbnail" content="https://pileskyd.me/" />
 
   <!-- Style -->
+  <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
+  <link rel="preload" href="/assets/fonts/exo2/exo2.css" as="style" onload="this.rel='stylesheet'">
   <style>
       <!-- @import '../../../assets/css/style.css' -->
   </style>
