--- a/src/view/component/script.html
+++ b/src/view/component/script.html
@@ -1,4 +1,1 @@
-<!--<script src="/assets/js/main.js"></script>-->
-<script>
-  <!-- @import '../../../assets/js/main.js' -->
-</script>
+<script type="module" src="/assets/js/main.js"></script>
