--- a/src/view/component/head.html
+++ b/src/view/component/head.html
@@ -1,27 +1,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="yandex-verification" content="c08fc87e9cb4bc9b" />
+  <meta name="yandex-verification" content="c08fc87e9cb4bc9b"/>
 
-  <title><!-- $title? --></title>
+  <title>PileskyD | <!-- $title? --></title>
 
   <!-- Meta-Data for social networks -->
-  <meta property="og:title" content="<!-- $title? -->" />
-  <meta property="og:description" content="<!-- $description? -->" />
-  <meta name="description" content = "<!-- $description? -->">
-  <meta property="og:site_name" content="Pilesky Denis - <!-- $title? -->" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://pileskyd.me/" />
+  <meta property="og:title" content="<!-- $title? -->"/>
+  <meta property="og:description" content="<!-- $description? -->"/>
+  <meta name="description" content="<!-- $description? -->">
+  <meta property="og:site_name" content="Pilesky Denis - <!-- $title? -->"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="https://pileskyd.me/"/>
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@PileskyD">
-  <meta name="twitter:image" content="https://pileskyd.me/assets/img/banner.png" />
-  <meta property="og:image" content="https://pileskyd.me/assets/img/banner.png" />
-  <meta name="thumbnail" content="https://pileskyd.me/" />
+  <meta name="twitter:image" content="https://pileskyd.me/assets/img/banner.png"/>
+  <meta property="og:image" content="https://pileskyd.me/assets/img/banner.png"/>
+  <meta name="thumbnail" content="https://pileskyd.me/"/>
 
   <!-- Style -->
   <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
   <link rel="preload" href="/assets/fonts/exo2/exo2.css" as="style" onload="this.rel='stylesheet'">
-  <style>
-      <!-- @import '../../../assets/css/style.css' -->
-  </style>
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
