--- a/src/view/component/head.html
+++ b/src/view/component/head.html
@@ -6,7 +6,7 @@
   <title>PileskyD | <!-- $title? --></title>
 
   <!-- Meta-Data for social networks -->
-  <meta property="og:title" content="<!-- $title? -->"/>
+  <meta property="og:title" content="PileskyD | <!-- $title? -->"/>
   <meta property="og:description" content="<!-- $description? -->"/>
   <meta name="description" content="<!-- $description? -->">
   <meta property="og:site_name" content="Pilesky Denis - <!-- $title? -->"/>
